--- a/src/global/stylesheet/base/_variables.scss
+++ b/src/global/stylesheet/base/_variables.scss
@@ -28,7 +28,7 @@ $line-height: 1.5;
 $content-width-mobile: 95vw;
 
 $content-width-md: calc(100vw - 0.5625rem - 14rem);
-$content-width-lg: 1080px;
+$content-width-lg: 82em;
 $content-width-xl: 1440px;
 
 @mixin padding {
