--- a/src/global/stylesheet/modules/_button.scss
+++ b/src/global/stylesheet/modules/_button.scss
@@ -17,16 +17,15 @@ $focus-color: #1c1c1c;
 }
 %button-base {
 	display: inline-flex;
-	padding: 0.8rem 1.2rem;
 	color: #0e0e0e !important; //  is added to colors in order to make button utility immutable.  Otherwise, it's common for `a` styles to override button specificity.
 	background: $background;
 
 	border: 0.15rem solid hsl(0deg 0% 7%);
 	border-radius: v.$base-radius;
-	font-family: 'Commissioner', sans-serif;
+	font-family: "Commissioner", sans-serif;
 	cursor: pointer;
 	font-size: unset;
-	gap: 0.25rem;
+	gap: 0.25em;
 	font-weight: 500;
 	text-transform: none;
 	// margin-bottom: 0.5rem;
@@ -38,14 +37,14 @@ $focus-color: #1c1c1c;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	padding: 0.7em 0.57em;
+	padding: 0.5625rem 1.1rem;
 	// height: 100%;
 	// width: 100%;
 	/* align-items: center; */
 	transition: background linear 75ms, color linear 75ms;
-	text-transform: uppercase;
-	font-weight: 600;
-	font-size: unset;
+	text-transform: capitalize;
+	// font-weight: 600;
+	font-size: 1rem;
 	justify-content: center;
 	align-items: center;
 	vertical-align: middle;
@@ -54,11 +53,10 @@ $focus-color: #1c1c1c;
 	//     outline-offset: -2px;
 	// }
 	transition: background linear 75ms, color linear 75ms;
-	text-transform: uppercase;
 	@media (hover: hover) {
 		&:hover {
 			color: rgb(15, 15, 15) !important;
-			background: lighten($focus-background, 13%) !important;
+			background: lighten($focus-background, 10%) !important;
 			border-color: #202020 !important;
 			box-shadow: 0 0 0.05rem 0.05rem rgba(0, 0, 0, 0.226) inset;
 			outline: 0;
@@ -70,9 +68,9 @@ $focus-color: #1c1c1c;
 	&.active {
 		@extend %active;
 		// background: #f1f1f1 !important;
-		color: $focus-color !important 	;
+		color: lighten($focus-color, 10%) !important 	;
 		border-color: $focus-color !important;
-		background: $focus-background !important;
+		background: lighten($focus-background, 3%) !important;
 	}
 	&:disabled,
 	.disabled {
@@ -95,6 +93,8 @@ button:not(.icon-btn),
 ////////////////////////////////
 button.small {
 	@extend %button-base;
+	max-width: -webkit-fit-content;
+	max-width: -moz-fit-content;
 	max-width: fit-content;
 }
 
@@ -158,10 +158,11 @@ button.danger {
 	&:hover {
 		color: lighten(#ff4949, 3%) !important;
 		border-color: #eb2019b2 !important;
+		background: #5c19174d !important;
 	}
 	&:active {
-		color: lighten(#ff4949, 10%) !important;
+		color: lighten(#fafafa, 10%) !important;
 		border-color: #eb20195b !important;
-		background: #5c191785 !important;
+		background: #c013136c !important;
 	}
 }
