--- a/src/lib/shared/listPages.scss
+++ b/src/lib/shared/listPages.scss
@@ -1,15 +1,16 @@
-$width: 14rem;
+$width: 1fr;
 :root {
 	--width: #{$width};
+	--max-width: 14rem;
 }
 @media screen and (min-width: 640px) and (max-width: 959px) {
-	$width: 18.2857rem;
+	$width: calc(100vmin * 0.66 - 11.65vmax);
 	:root {
 		--width: #{$width};
 	}
 }
 @media screen and (min-width: 960px) {
-	$width: 21.2857rem;
+	$width: calc(100vmin * 0.66 - 11.65vmax);
 	:root {
 		--width: #{$width};
 	}
@@ -27,12 +28,16 @@ $width: 14rem;
 .button-group {
 	display: flex;
 	flex-wrap: wrap;
-	flex: 0 1 auto;
+	flex: 1 1 100%;
 	gap: 0.5rem;
 	margin-top: 0.8rem;
 	align-items: center;
 	grid-area: buttons;
 	justify-content: flex-start;
+	@media screen and (min-width: 286px) and (max-width: 512px) {
+		justify-self: center;
+		// justify-items: ;
+	}
 }
 .editable {
 	&-text:hover {
@@ -63,19 +68,27 @@ $width: 14rem;
 
 	&.description {
 		// margin: 0.25em 0 0.5em 0;
+		max-width: 68ch;
 		font-size: 1rem;
+		@media (pointer: coarse) {
+			display: none;
+		}
 	}
 }
 .metadata {
 	grid-area: metadata;
 	align-self: flex-start;
 	line-height: normal;
+	word-wrap: unset;
+	// white-space: nowrap;
+	// white-space: nowrap;
 	@media screen and (min-width: 640px) {
 		align-self: flex-end;
 	}
 }
 .info-title {
-	display: flex;
+	// display: grid;
+	// width: 100%;
 	margin-bottom: 0.3em;
 }
 .box-title {
@@ -85,13 +98,20 @@ $width: 14rem;
 	font-family: "Commissioner", sans-serif !important;
 
 	text-overflow: ellipsis;
-	display: inline;
-	max-width: 90%;
-	line-break: strict;
+	display: block;
+	// max-width: 90%;
+	// line-break: strict;
 	margin: 0 0 0.2rem;
 
-	word-break: normal;
-	@media screen and (min-width: 640px) {
+	word-break: keep-all;
+
+	text-overflow: ellipsis;
+	// white-space: nowrap;
+	// overflow: hidden;
+	text-align: center;
+
+	@media screen and (min-width: 512px) {
+		text-align: inherit;
 		font-size: 2.85rem !important;
 	}
 }
@@ -124,18 +144,23 @@ small {
 	user-select: none;
 	width: auto;
 	margin-bottom: 1rem;
+
+	max-width: 100%;
+	overflow-wrap: break-word;
+	// white-space: nowrap;
+
 	@media screen and (min-width: 286px) and (max-width: 512px) {
-		grid-template-columns: var(--width) 1fr;
+		grid-template-columns: 1fr;
 		gap: 0.5rem 1rem;
 		grid-template-areas:
-			"img metadata"
-			"img metadata"
-			"buttons buttons";
+			"img img"
+			"metadata metadata"
+			"buttons buttons ";
 	}
 	@media screen and (min-width: 512px) {
-		grid-template-columns: var(--width) 1fr;
+		grid-template-columns: min(var(--width), 24rem) 1fr;
 
-		gap: 0.25rem 1.25rem;
+		gap: 0.25rem 2.05em;
 		grid-template-areas:
 			"img metadata"
 			"img buttons"
@@ -159,11 +184,17 @@ hr {
 	aspect-ratio: 1/1;
 	height: auto;
 	align-self: center;
-	width: 100%;
-	max-width: var(--width);
+	width: var(--width);
+	max-width: 16rem;
+	@media screen and (min-width: 640px) {
+		width: 100%;
+		max-width: min(var(--width), 24rem);
+	}
 	img {
 		max-width: inherit;
 		border-radius: 2%;
+
+		-webkit-filter: drop-shadow(0 0 0.3rem black);
 
 		filter: drop-shadow(0 0 0.3rem black);
 		will-change: contents, width;
@@ -174,12 +205,6 @@ hr {
 		height: auto;
 		width: 100%;
 	}
-}
-.info-wrapper {
-}
-.info-title {
-	display: inline-block;
-	width: 100%;
 }
 .info {
 	width: 100%;
