--- a/src/lib/shared/listPages.scss
+++ b/src/lib/shared/listPages.scss
@@ -35,6 +35,7 @@ $width: 1fr;
 	grid-area: buttons;
 	justify-content: flex-start;
 	@media screen and (min-width: 286px) and (max-width: 512px) {
+		margin-top: 0rem;
 		justify-self: center;
 		// justify-items: ;
 	}
@@ -80,22 +81,30 @@ $width: 1fr;
 	align-self: flex-start;
 	line-height: normal;
 	word-wrap: unset;
+	display: flex;
+	flex-direction: column;
+	// : center;
+	text-align: center;
 	// white-space: nowrap;
 	// white-space: nowrap;
+	margin-bottom: 0.333em;
+
 	@media screen and (min-width: 640px) {
+		text-align: inherit;
+
 		align-self: flex-end;
 	}
 }
 .info-title {
 	// display: grid;
 	// width: 100%;
-	margin-bottom: 0.3em;
+	margin-bottom: 0.666em;
 }
 .box-title {
 	font-weight: 700;
 	font-size: 2em !important;
 	letter-spacing: -0.01rem;
-	font-family: 'Commissioner', sans-serif !important;
+	font-family: "Commissioner", sans-serif !important;
 
 	text-overflow: ellipsis;
 	display: block;
@@ -136,9 +145,9 @@ small {
 	grid-template-columns: 1fr;
 	gap: 0.5rem 1.25rem;
 	grid-template-areas:
-		'img'
-		'metadata'
-		'buttons';
+		"img"
+		"metadata"
+		"buttons";
 	padding: 0.8em;
 	transition: all 0.23s cubic-bezier(0.39, 0.575, 0.565, 1);
 	user-select: none;
@@ -153,18 +162,18 @@ small {
 		grid-template-columns: 1fr;
 		gap: 0.5rem 1rem;
 		grid-template-areas:
-			'img img'
-			'metadata metadata'
-			'buttons buttons ';
+			"img img"
+			"metadata metadata"
+			"buttons buttons ";
 	}
 	@media screen and (min-width: 512px) {
 		grid-template-columns: min(var(--width), 24rem) 1fr;
 
 		gap: 0.25rem 2.05em;
 		grid-template-areas:
-			'img metadata'
-			'img buttons'
-			'img buttons';
+			"img metadata"
+			"img buttons"
+			"img buttons";
 	}
 }
 hr {
