--- a/src/global/stylesheet/base/_cssvars.scss
+++ b/src/global/stylesheet/base/_cssvars.scss
@@ -2,11 +2,11 @@
 :root {
 	--base-spacing: 0.75rem;
 	--base-font-size: 0.75rem;
-	--base-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	--base-font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 
 	--secondary-font-family: "Commissioner", sans-serif;
-	--color-dark: #fefefefe;
+	--color-dark: hsl(0deg 0% 98%);
 	--color-light: #111113;
 	--color-med: #202024;
 
