--- a/src/global/stylesheet/base/_typography.scss
+++ b/src/global/stylesheet/base/_typography.scss
@@ -17,9 +17,9 @@ h6,
 	color: var(--color-dark);
 	font-family: "Commissioner", sans-serif;
 
-	line-height: 1.5;
+	line-height: 1.2;
 	font-weight: 500;
-	margin: 0 0 1.138rem;
+	margin: calc(1.138em / 3) 0 0.8667em;
 }
 
 h1,
@@ -85,6 +85,7 @@ a:not(.no-style),
 	&:active,
 	&:focus,
 	&:hover {
+		-webkit-text-decoration: underline 0.001rem solid;
 		text-decoration: underline 0.001rem solid;
 		text-underline-offset: 0.001rem;
 		color: darken($link-color, 15%);
@@ -118,11 +119,12 @@ hr {
 	vertical-align: baseline;
 	// display: inline-flex;
 	height: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-		Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
+		sans-serif;
 	flex: none;
 	color: #000 !important;
 	font-weight: 700;
+	-webkit-filter: contrast(100%);
 	filter: contrast(100%);
 	background: #ffffffbf;
 	padding: 0 0.25rem;
