--- a/src/global/stylesheet/base/_variables.scss
+++ b/src/global/stylesheet/base/_variables.scss
@@ -8,13 +8,13 @@ $size-3: 1.44rem;
 $size-4: 1.728rem;
 $size-5: 2.074rem;
 
-$base-spacing: 0.75rem;
+$base-spacing: 0.75em;
 $sm-spacing: m.div($base-spacing, 2.5);
 $md-spacing: $base-spacing;
 $lg-spacing: calc($base-spacing * 2);
 $xl-spacing: calc($base-spacing * 1.25);
 
-$base-radius: 0.5rem;
+$base-radius: 0.5em;
 $xs-radius: m.div($base-radius, 0.95);
 $sm-radius: m.div($base-radius, 0.8);
 $md-radius: m.div($base-radius, 0.625);
@@ -29,23 +29,31 @@ $content-width-mobile: 95vw;
 
 $content-width-md: calc(100vw - 0.5625rem - 14rem);
 $content-width-lg: 82em;
-$content-width-xl: 1440px;
+$content-width-xl: 87.5em;
 
-@mixin padding {
-	padding: 4vh 0.5rem 5vh 0.5rem;
-	padding-bottom: 1vh !important;
+@mixin content-spacing($type: "padding") {
+	#{$type}: 2.125em 0.75em 5vh 0.75em;
+	#{$type}-bottom: 3.3125vh !important;
+	@media only screen and (min-width: 1080px) and (max-width: 1366px) {
+		#{$type}: 5vh 2rem 0 2rem;
+		#{$type}-bottom: 0.8rem;
+	}
+	@media only screen and (min-width: 1367px) and (max-width: 1600px) {
+		#{$type}: 6vh 2rem 0 2rem;
+	}
+	@media only screen and (min-width: 1601px) {
+		#{$type}: 7vh 2rem 0 2rem;
+	}
+}
+@mixin content-width {
 	max-width: $content-width-mobile;
 	@media only screen and (min-width: 1080px) and (max-width: 1366px) {
 		max-width: $content-width-md;
-		padding: 5vh 2rem 0 2rem;
-		padding-bottom: 0.8rem;
 	}
 	@media only screen and (min-width: 1367px) and (max-width: 1600px) {
 		max-width: $content-width-lg;
-		padding: 6vh 2rem 0 2rem;
 	}
 	@media only screen and (min-width: 1601px) {
 		max-width: $content-width-xl;
-		padding: 7vh 2rem 0 2rem;
 	}
 }
