--- a/src/lib/components/ListInfoBar/index.scss
+++ b/src/lib/components/ListInfoBar/index.scss
@@ -1,7 +1,7 @@
 .info-bar {
 	display: grid;
 	grid-template-rows: 1fr;
-	grid-template-columns: [index] 5rem 1fr 2.8rem;
+	grid-template-columns: [index] 5rem 1fr 2.9rem;
 	padding: 0.8rem 0 0.4rem 0;
 	max-width: inherit;
 	/* gap: 0.8rem; */
@@ -33,7 +33,7 @@
 		padding-right: 1.5rem;
 	}
 	@media screen and (min-width: 640px) {
-		grid-template-columns: [index] 8rem [title] 1fr 2.8rem;
+		grid-template-columns: [index] 8rem [title] 1fr 3rem;
 		.index {
 			grid-column: index;
 			display: block;
@@ -59,6 +59,6 @@
 
 	justify-content: flex-start;
 	// justify-items: right;
-	margin-bottom: var(--sm-spacing);
+	margin-bottom: var(--md-spacing);
 	// margin-top: var(--md-spacing);
 }
