Docker support (documentation wip) Updated build script Fixed queue on mobile Possibly fixed circular dep. issue w/ dev server

--- a/app/src/global/stylesheet/utilities/_units.scss
+++ b/app/src/global/stylesheet/utilities/_units.scss
@@ -230,7 +230,7 @@ $base-font-size: 16px !default;
 			pct: 0%,
 			percent: 0%,
 			num: 0,
-			number: 0 // percent or number,,
+			number: 0 // percent or number,,,
 		),
 		$unit
 	);
