`proxy-server/rust` - created base project `proxy-server/deno` - Fixed connection close crash `app` - - fixed HTTP streaming, rewrote Settings page, more typing - Optimized Carousels - Fixed ArtistPageHeader not finding container - Start rewriting global SCSS

--- a/app/src/global/stylesheet/base/_typography.scss
+++ b/app/src/global/stylesheet/base/_typography.scss
@@ -19,7 +19,7 @@ h6,
 
 	line-height: 1.2;
 	font-weight: 500;
-	margin: calc(1.138em / 3) 0 0.667em;
+	margin: 0.3125em 0 1.38rem;
 }
 
 h1,
@@ -31,7 +31,7 @@ h1,
 
 h2,
 .h2 {
-	font-size: 2.1374em;
+	font-size: 2.174rem;
 	font-weight: 700;
 }
 
