--- a/app/src/global/redesign/base/_layout.scss
+++ b/app/src/global/redesign/base/_layout.scss
@@ -111,8 +111,17 @@ body {
 	// @include mixins.animation(0, 0.2s, false, fade, normal, both);
 	opacity: 0;
 	will-change: opacity, transform;
-	transition: opacity linear 150ms;
+	transition: opacity linear 100ms;
 
+	&::before,
+	&::after {
+		transform: rotate(-135deg);
+		width: 8px;
+		height: 8px;
+		bottom: 50%;
+		right: 50%;
+		content: "";
+	}
 	transform: translate(calc(var(--tt-pos-x)), var(--tt-pos-y));
 	transform-origin: center;
 	// isolation: isolate;
@@ -122,7 +131,8 @@ body {
 	font-size: v.$size-1;
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
 		"Helvetica Neue", sans-serif;
-	border-radius: 0.25em;
+	border-radius: 4px;
+	color: #f1f1f1;
 	padding: 0.3rem;
 	font-weight: 500;
 	min-width: 1rem;
