--- a/app/src/lib/shared/listPages.scss
+++ b/app/src/lib/shared/listPages.scss
@@ -149,7 +149,7 @@ small {
 		"img"
 		"metadata"
 		"buttons";
-	margin-inline: 0.8em;
+	// margin-inline: 0.8em;
 	user-select: none;
 	width: auto;
 	// @include v.content-spacing($type: "margin");
