--- a/app/src/global/stylesheet/modules/_select.scss
+++ b/app/src/global/stylesheet/modules/_select.scss
@@ -91,8 +91,9 @@ select {
 	background-color: inherit;
 	font-size: 100% !important;
 	border-radius: var(--md-radius);
-	padding: 0.2rem 2rem 0.5rem 0.5rem;
+	padding: .2em 2em 0.325em 0.6em;
 	border: none;
-	transition: 0.1s cubic-bezier(0.47, 0, 0.745, 0.715);
+	transition: cubic-bezier(0.47, 0, 0.745, 0.715);
+	transition-duration: 100ms;
 	transition-property: filter, border, background;
 }
