--- a/app/src/global/redesign/base/_layout.scss
+++ b/app/src/global/redesign/base/_layout.scss
@@ -4,6 +4,8 @@ html {
 	box-sizing: border-box;
 	scroll-behavior: smooth;
 	-webkit-overflow-scrolling: touch;
+	font-size: 12px;
+	overscroll-behavior: contain;
 }
 
 *,
@@ -11,18 +13,7 @@ html {
 *::after {
 	box-sizing: inherit;
 }
-html {
-	font-size: 12px;
-	overscroll-behavior: contain;
-}
-// @media (pointer: fine) {
-// 	*:focus-visible:not(input):not(.input):not(select):not(.select):not(.no-style) {
-// 		outline: 0.16666em rgb(113, 175, 255) solid !important;
-// 	}
-// }
-// :focus:not(:focus-visible) {
-// 	outline: none;
-// }
+
 html,
 body {
 	background-color: #010102;
@@ -31,22 +22,16 @@ body {
 	position: fixed;
 	min-height: 100vh;
 	min-width: 100vw;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+	inset: 0;
 	overscroll-behavior: contain;
 	max-height: 100%;
 	overflow: hidden;
-}
-
-body {
 	margin: 0;
 }
 
 :root {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 	word-wrap: break-word;
 	-webkit-text-size-adjust: 100%;
 	--base-font-size: 0.75rem;
@@ -93,7 +78,7 @@ body {
 	--player-bar-height: clamp(5rem, 5.6rem, 5.95rem);
 	--top-bar-height: clamp(3.9rem, 4.175rem, 4.625rem);
 	text-rendering: auto;
-	// --top-bar-height: calc(min(16, var(--base-font-size)));
+
 	@media screen and (min-width: 40rem) and (max-width: 115.375rem) {
 		--top-bar-height: clamp(3.8rem, 4rem, 4.75rem);
 		--base-font-size: 0.875rem;
@@ -111,7 +96,7 @@ body {
 	position: absolute;
 	display: block;
 	pointer-events: none;
-	// @include mixins.animation(0, 0.2s, false, fade, normal, both);
+
 	opacity: 0;
 	will-change: opacity, transform;
 	transition: opacity linear 100ms;
@@ -127,13 +112,13 @@ body {
 	}
 	transform: translate(calc(var(--tt-pos-x)), var(--tt-pos-y));
 	transform-origin: center;
-	// isolation: isolate;
+
 	border: 1px solid #323232;
 	box-shadow: 0px 0px 1px #323232;
 	background: #121212;
 	font-size: v.$size-1;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 	border-radius: 4px;
 	color: #f1f1f1;
 	padding: 0.3rem;
@@ -194,7 +179,6 @@ main {
 	position: absolute;
 	inset: 0;
 
-	// min-height: 100vh;
 	isolation: isolate;
 }
 .app-content-m {
@@ -207,9 +191,8 @@ main {
 }
 
 .container {
-	// margin: 0 auto;
 	max-width: 112rem;
-	// padding: 0 2rem;
+
 	position: relative;
 	display: flex;
 	width: 100%;
