--- a/app/src/global/redesign/base/_variables.scss
+++ b/app/src/global/redesign/base/_variables.scss
@@ -1,7 +1,5 @@
 @use "sass:math" as m;
 
-// GLOBAL VARIABLES (SCSS)
-
 $size-base: 0.75rem;
 $size-1: 1rem;
 $size-2: 1.2rem;
@@ -27,15 +25,15 @@ $secondary-font-family: "CommissionerVariable", sans-serif;
 $line-height: 1.5;
 
 $z-index: (
-	"most-behind": -250,
-	"behind": -125,
-	"least-behind": -125,
-	"below-root": -1,
-	"default": 0,
-	"least-forward": 125,
-	"forward": 250,
-	"most-forward": 500,
+	"z-250n": -250,
+	"z-125n": -125,
+	"z-1n": -1,
+	"z-0": 0,
+	"z-125p": 125,
+	"z-250p": 250,
+	"z-500p": 500,
 );
+
 $content-width-mobile: calc(100vw - 2.25rem);
 
 $content-width-md: calc(100vw - 0.5625rem - 14rem);
