--- a/app/src/global/stylesheet/base/_typography.scss
+++ b/app/src/global/stylesheet/base/_typography.scss
@@ -1,6 +1,3 @@
-// BASE TYPOGRAPHY STYLES
-// for inverted color schemes, see `inverse-colors` global mixin.
-
 h1,
 h2,
 h3,
@@ -71,8 +68,7 @@ a:not(.no-style),
 .link:not(.no-style) {
 	$link-color: rgb(245, 245, 245);
 	color: rgb(245, 245, 245);
-	// -webkit-text-decoration: $link-color 0.01em underline solid;
-	// text-decoration: $link-color 0.1em underline solid;
+
 	text-decoration: none;
 	transition: color 0.2s;
 	display: inline;
@@ -90,7 +86,6 @@ a:not(.no-style),
 		text-underline-offset: 0.001em;
 		color: darken($link-color, 15%);
 		outline: none;
-		// text-decoration: none;
 	}
 	&:hover {
 		cursor: pointer;
@@ -111,10 +106,10 @@ hr {
 	/* width: 1em; */
 	font-size: xx-small;
 	vertical-align: baseline;
-	// display: inline-flex;
+
 	height: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
-		sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans,
+		Helvetica Neue, sans-serif;
 	flex: none;
 	color: #000 !important;
 	font-weight: 700;
