--- a/app/src/global/stylesheet/modules/_dropdown.scss
+++ b/app/src/global/stylesheet/modules/_dropdown.scss
@@ -25,8 +25,6 @@
 		drop-shadow(0rem 0rem 0.05rem hsl(0deg 0% 0% / 99%)) contrast(2);
 	filter: drop-shadow(-0rem -0rem 0.05rem hsl(0deg 0% 0% / 99%)) drop-shadow(0rem 0rem 0.05rem hsl(0deg 0% 0% / 99%))
 		contrast(2);
-
-	// filter: drop-shadow(-0rem -0rem 0.15rem hsl(0deg 0% 0% / 52%));
 }
 
 .dd-item {
@@ -38,11 +36,11 @@
 	cursor: pointer;
 	margin: 0;
 	font-size: inherit;
-	// border-bottom: 0.0714rem solid #2a2b30;
+
 	background-color: #0000;
 	color: #fff9f9;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 	position: relative;
 	&:hover {
 		color: #fcf6f6;
@@ -62,7 +60,6 @@
 	border-radius: var(--sm-radius);
 	z-index: 200;
 
-	// opacity: 0;
 	transform: translate(0px, 0px);
 	background: #333333;
 	border: 1px #686868 solid;
@@ -80,7 +77,6 @@
 	background: #333333;
 	border: 1px #5f5f5f solid;
 	pointer-events: all;
-	// isolation: isolate;
 
 	flex-direction: column;
 	flex-wrap: nowrap;
