--- a/app/src/global/stylesheet/modules/_select.scss
+++ b/app/src/global/stylesheet/modules/_select.scss
@@ -20,7 +20,6 @@
 	transition-property: filter, border, background;
 	&:active,
 	&:focus-within {
-		// background: #262e38;
 		filter: brightness(1.15);
 		border: 0.25px rgb(114, 114, 114) solid;
 	}
@@ -67,7 +66,6 @@ select {
 
 	&:active,
 	&:focus-within {
-		// background: #262e38;
 		filter: brightness(1.1);
 	}
 	-webkit-text-size-adjust: auto;
@@ -91,7 +89,7 @@ select {
 	background-color: inherit;
 	font-size: 100% !important;
 	border-radius: var(--md-radius);
-	padding: .2em 2em 0.325em 0.6em;
+	padding: 0.2em 2em 0.325em 0.6em;
 	border: none;
 	transition: cubic-bezier(0.47, 0, 0.745, 0.715);
 	transition-duration: 100ms;
