--- a/app/src/global/stylesheet/utilities/_units.scss
+++ b/app/src/global/stylesheet/utilities/_units.scss
@@ -1,67 +1,29 @@
-// ____________________________________________________________________________
 //
-//    Unit Conversion v.2.1.1
-// ____________________________________________________________________________
-//
-//   Function               Input units
-//
-//   Absolute length
-//   px(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   pt(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   pc(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   in(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   mm(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   cm(input);             px, pt, pc, in, mm, cm, em, rem, number
-//
-//   Relative length
-//   em(input);             px, pt, pc, in, mm, cm, em, rem, number
-//   rem(input);            px, pt, pc, in, mm, cm, em, rem, number
-//   ex(input);             ex, number
-//   ch(input);             ch, number
-//   vw(input);             vw, number
-//   vh(input);             vh, number
-//   vmin(input);           vmin, number
-//   vmax(input);           vmax, number
-//
-//   Angle
-//   deg(input);            deg, rad, grad, turn, number
-//   rad(input);            deg, rad, grad, turn, number
-//   grad(input);           deg, rad, grad, turn, number
-//   turn(input);           deg, rad, grad, turn, number
-//
-//   Resolution
-//   dpi(input);            dpi, dpcm, dppx, number
-//   dpcm(input);           dpi, dpcm, dppx, number
-//   dppx(input);           dpi, dpcm, dppx, number
-//
-//   Time
-//   s(input);              s, ms, number
-//   ms(input);             s, ms, number
-//
-//   Frequency
-//   hz(input);             hz, khz, number
-//   khz(input);            hz, khz, number
-//
-//   String
-//   str(input);            anything not null
-//
-//   Number, int and uint
-//   num(input);            px, pt, pc, in, mm, cm, em, rem, ex, ch,
-//                          vw, vh, vmin, vmax, deg, rad, grad, turn,
-//                          dpi, dpcm, dppx, s, ms, hz, khz, number
-//   int(input);            as number
-//   uint(input);           as number
-//
-//   Aliases
-//   string(input);
-//   number(input);
-//
-// ____________________________________________________________________________
 
-// Base font size in pixel for converting em and rem to absolute lengths.
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
+//
+
 $base-font-size: 16px !default;
 
-// Absolute lengths
 @function px($input) {
 	@return to-unit(px, $input);
 }
@@ -84,7 +46,6 @@ $base-font-size: 16px !default;
 	@return to-unit(q, $input);
 }
 
-// Angles
 @function deg($input) {
 	@return to-unit(deg, $input);
 }
@@ -98,7 +59,6 @@ $base-font-size: 16px !default;
 	@return to-unit(turn, $input);
 }
 
-// Resolution
 @function dpi($input) {
 	@return to-unit(dpi, $input);
 }
@@ -109,7 +69,6 @@ $base-font-size: 16px !default;
 	@return to-unit(dppx, $input);
 }
 
-// Time
 @function ms($input) {
 	@return to-unit(ms, $input);
 }
@@ -117,7 +76,6 @@ $base-font-size: 16px !default;
 	@return to-unit(s, $input);
 }
 
-// Frequencies
 @function hz($input) {
 	@return to-unit(hz, $input);
 }
@@ -125,10 +83,9 @@ $base-font-size: 16px !default;
 	@return to-unit(khz, $input);
 }
 
-// Relative lengths
 @function em($input...) {
 	$em: to-unit(em, nth($input, 1));
-	// Adjust for compounds (visual size)
+
 	@if length($input) > 1 {
 		@for $i from 2 through length($input) {
 			$em: $em / num(em(nth($input, $i)));
@@ -140,7 +97,6 @@ $base-font-size: 16px !default;
 	@return to-unit(rem, num(em($input)));
 }
 
-// Inconvertible relative lengths – depends on font
 @function ex($input) {
 	@return to-unit(ex, $input);
 }
@@ -148,7 +104,6 @@ $base-font-size: 16px !default;
 	@return to-unit(ch, $input);
 }
 
-// Viewport
 @function vw($input) {
 	@return to-unit(vw, $input);
 }
@@ -162,7 +117,6 @@ $base-font-size: 16px !default;
 	@return to-unit(vmax, $input);
 }
 
-// Strings and numbers
 @function str($input) {
 	@return #{$input};
 }
@@ -181,7 +135,6 @@ $base-font-size: 16px !default;
 	@return abs(int($input));
 }
 
-// Aliases
 @function string($input) {
 	@return str($input);
 }
@@ -189,9 +142,7 @@ $base-font-size: 16px !default;
 	@return num($input);
 }
 
-// Conversion function
 @function to-unit($unit, $input) {
-	// Test against valid CSS units
 	$to-unit: map-get(
 		(
 			px: 0px,
@@ -201,53 +152,49 @@ $base-font-size: 16px !default;
 			mm: 0mm,
 			cm: 0cm,
 			q: 0Q,
-			// absolute length
+
 			em: 0em,
 			rem: 0rem,
 			ch: 0ch,
 			ex: 0ex,
-			// relative length - font based
+
 			vw: 0vw,
 			vh: 0vh,
 			vmin: 0vmin,
 			vmax: 0vmax,
-			// relative length - viewport based
+
 			deg: 0deg,
 			turn: 0turn,
 			grad: 0grad,
 			rad: 0rad,
-			// angle
+
 			s: 0s,
 			ms: 0ms,
-			// time
+
 			hz: 0Hz,
 			khz: 0kHz,
-			// frequency
+
 			dpi: 0dpi,
 			dpcm: 0dpcm,
 			dppx: 0dppx,
-			// resolution
+
 			pct: 0%,
 			percent: 0%,
 			num: 0,
-			number: 0 // percent or number,,,
+			number: 0,
 		),
 		$unit
 	);
 
-	// Error handling – wrong $unit
-	// Incomparable units are caught in convertion
 	@if not $to-unit {
 		@error 'Could not convert to `#{$unit}` – must be a valid CSS unit';
 		@return null;
 	}
 
-	// Number/incomparable conversion
 	@if index(num number ex ch vw vh vmin vmax, $unit) {
 		$value: num($input);
 	}
 
-	// EM/REM convertion using px as base
 	@if index(em rem, unit($input)) {
 		$input: 0px + num($input) * $base-font-size/1px;
 	}
@@ -256,7 +203,6 @@ $base-font-size: 16px !default;
 		$input: num($input) * 1px / $base-font-size;
 	}
 
-	// Bug fix – resolution units seems to be flipped
 	@if index(dpi dpcm dppx, $unit) {
 		$units: (
 			dppx: 0dppx,
@@ -267,12 +213,9 @@ $base-font-size: 16px !default;
 		$input: if(1dppx < 95dpi, num($input-unit + (num($input) + $to-unit)), $input);
 	}
 
-	// Convert
 	@return $to-unit + $input;
 }
 
-//  Convert number to ratio
-//  ratio(1.7777778) =>   16/9
 @function ratio($x, $y: null) {
 	@if not $y {
 		$n: $x;
