--- a/app/src/lib/components/PlaylistPopper/index.scss
+++ b/app/src/lib/components/PlaylistPopper/index.scss
@@ -26,8 +26,8 @@ form {
 	max-width: 15.5rem;
 }
 .file-button {
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-		"Helvetica Neue", sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 	&:hover::after {
 		background: #525252b2;
 	}
@@ -49,10 +49,9 @@ form {
 	width: inherit;
 	height: inherit;
 	color: #e3e3e3;
-	// color: rgb(53, 53, 53) !important;
+
 	cursor: pointer;
-	// text-shadow: 1px 1px #fff;
-	// font-weight: 700;
+
 	font-variant-caps: unset !important;
 	font-size: unset;
 }
@@ -61,14 +60,14 @@ form {
 	top: 0;
 	right: 0;
 	bottom: 0;
-	// left:0;
+
 	content: "Select";
 	color: rgb(238, 238, 238);
 	background: #353535b2;
 	display: inline-flex;
 	place-items: center;
 	font-weight: 500;
-	// padding: ;
+
 	padding: 0.4rem 0.7rem;
 	transition: background linear 125ms;
 }
