--- a/app/src/global/stylesheet/_layout.scss
+++ b/app/src/global/stylesheet/_layout.scss
@@ -34,7 +34,8 @@ $themes: (dark, dim, midnight, ytm);
 	bottom: 0;
 	display: block;
 	width: 100%;
-	position: absolute;
+	position: fixed;
+	contain: layout paint;
 	height: var(--player-bar-height);
 	min-width: 100%;
 	display: flex;
