--- a/app/src/global/stylesheet/modules/_button.scss
+++ b/app/src/global/stylesheet/modules/_button.scss
@@ -33,7 +33,7 @@ $focus-color: #1c1c1c;
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	padding: 0.5625em 1.1em;
+	padding: .63125em 1.25em;
 	text-transform: capitalize;
 	font-size: 1em;
 	justify-content: center;
