--- a/app/src/lib/components/Player/ProgressBar/index.scss
+++ b/app/src/lib/components/Player/ProgressBar/index.scss
@@ -1,13 +1,19 @@
 .progress-bar {
 	width: 100%;
 	will-change: visibility;
-	contain: paint;
+	contain: content;
+	overflow: hidden;
 	isolation: isolate;
 	background-clip: content-box;
 	background-color: rgb(84, 84, 88);
-	border: #0000 solid 0.3em;
-	border-radius: 333333em;
-	height: calc(0.25rem + 10px);
+	border: #0000 solid calc(var(--height) / 3);
+	border-radius: calc(var(--height) / 2);
+	height: var(--height);
+	position: absolute;
+
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .hover {
 	background-color: #edecec66;
@@ -26,10 +32,24 @@
 	border-radius: 333333em;
 	isolation: isolate;
 }
-.progress-container {
+.progress-bar-wrapper {
 	position: relative;
+	width: 100%;
+	height: 100%;
+}
+.progress-container {
+	--height: 1rem;
+	contain: layout;
+	display: flex;
+	font-size: var(--base-font-size);
+	gap: 0.5em;
+	grid-template-columns: auto 1fr auto;
+	height: 1rem;
+	position: relative;
+	align-items: flex-end;
 }
 progress {
+	height: var(--height);
 	display: block;
 	width: 100%;
 	height: inherit;
@@ -42,6 +62,8 @@ progress {
 	outline: none;
 	border: transparent;
 	padding: 0;
+	position: absolute;
+	inset: 0;
 }
 
 progress::-webkit-progress-bar {
@@ -53,4 +75,12 @@ progress::-moz-progress-bar {
 }
 progress::-webkit-progress-value {
 	background-color: rgb(255, 255, 255);
+}
+
+.timestamp {
+	display: inline-block;
+	font-family: var(--base-font-family);
+	font-size: calc(var(--base-font-size) * 0.95);
+	white-space: nowrap;
+	vertical-align: top;
 }
