`app` - Tweaked border radii

--- a/app/src/lib/components/Carousel/index.scss
+++ b/app/src/lib/components/Carousel/index.scss
@@ -120,6 +120,8 @@
 	@include media-query(xl) {
 		--thumbnail-size: 15em;
 	}
+
+	--column-width: calc(var(var(--thumbnail-size)) + 1.25em);
 }
 
 .scroll {
