--- a/app/src/lib/components/Carousel/index.scss
+++ b/app/src/lib/components/Carousel/index.scss
@@ -121,7 +121,7 @@
 		--thumbnail-size: 15em;
 	}
 
-	--column-width: calc(var(var(--thumbnail-size)) + 1.25em);
+	--column-width: calc(var(--thumbnail-size) + 1.25em);
 }
 
 .scroll {
