--- a/app/src/global/stylesheet/base/_typography.scss
+++ b/app/src/global/stylesheet/base/_typography.scss
@@ -105,8 +105,8 @@ hr {
 	vertical-align: baseline;
 
 	height: 100%;
-	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans,
-		Helvetica Neue, sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
+		sans-serif;
 	flex: none;
 	color: #000 !important;
 	font-weight: 700;
@@ -120,6 +120,6 @@ hr {
 }
 
 .secondary {
-	color: rgb(175, 175, 175);
+	color: rgba(255, 255, 255, 0.7) !important;
 	font-weight: 400;
 }
