`app` - changed `/api` to `/api/v1` Fixes #114 Fixes playlist page Cleans up queue store a bit

--- a/app/src/global/stylesheet/base/_forms.scss
+++ b/app/src/global/stylesheet/base/_forms.scss
@@ -104,6 +104,13 @@ input[type="search"]::-webkit-search-results-decoration {
 	&.no-btn {
 		display: block;
 	}
+	> input[type="text"] {
+		-webkit-appearance: none;
+		background: #0000;
+		border: none;
+		appearance: none;
+		width: inherit;
+	}
 }
 
 input[type="search"] {
